include dashboard and string constants class